correction scss diff collapse desc equipment

--- a/src/pages/Accomodation/accomodation.scss
+++ b/src/pages/Accomodation/accomodation.scss
@@ -45,6 +45,12 @@ h3 {
     font-size: 18px;
     margin: 0;
   }
+
+  .accomodation__list {
+      background-color: #f6f6f6;
+      border-radius: 20px;
+      padding: 20px;
+    }
 }
 
 @media all and (min-width: 991px) {
