--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -38,16 +38,6 @@
 }
 
 @media all and (min-width: 767px) {
-  .accomodation {
-    padding: 30px 0;
-
-    &__list {
-      background-color: #f6f6f6;
-      border-radius: 20px;
-      padding: 20px;
-    }
-  }
-
   .bannertitle h1 {
     text-align: center;
     padding: 10px;
